ajout balise meta pour le referencement

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <meta
+      name="description"
+      content="Organisez votre vie avec notre application Todolist. Gérez vos tâches facilement, synchronisez sur tous vos appareils, recevez des rappels personnalisables et boostez votre productivité. Essayez-la gratuitement dès maintenant !"
+    />
+
     <title>My To-Do-List</title>
   </head>
   <body>
